--- a/.github/workflows/terraform-s3-setup.yml
+++ b/.github/workflows/terraform-s3-setup.yml
@@ -2,7 +2,9 @@ name: Setup Terraform S3 Backend
 
 on:
   workflow_dispatch:
-
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 jobs:
   setup-backend:
     runs-on: ubuntu-latest
@@ -14,8 +16,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.production.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.production.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
       - name: Check if S3 bucket exists
