--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,10 +45,10 @@
 name: 'Terraform'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  workflow_dispatch:
 permissions:
   contents: read
 
