Add permissions to allow pushing changes back to PR

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,6 +2,8 @@ name: Generate terraform docs
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write # Needed to push changes back to the PR
 jobs:
   docs:
     runs-on: ubuntu-latest
